--- a/HitomiScrollViewerWebApp/Pages/SearchPage.razor
+++ b/HitomiScrollViewerWebApp/Pages/SearchPage.razor
@@ -2,37 +2,53 @@
 
 <PageTitle>Search</PageTitle>
 
+<MudOverlay DarkBackground Visible="@_overlayVisible" />
 <div style="height: 100%;" class="d-flex pa-8 gap-4">
     <div id="search-page-left-container" style="flex: 3;" class="d-flex flex-column gap-2">
-        <MudPaper id="tag-filter-editor-control-panel" Class="pa-8 gap-2" Style="height: 60%; display: grid; grid-template-rows: repeat(3, min-content)">
-            <TagFilterEditor @ref="_tagFilterEditor"
-                             TagFilters="@TagFilters"
-                             SelectedTagFilterChanged="@SelectedTagFilterChanged"
-                             OnCreateButtonClicked="@CreateTagFilter"
-                             OnRenameButtonClicked="@RenameTagFilter"
-                             OnSaveButtonClicked="@(() => SaveTagFilter(_tagFilterEditor.CurrentTagFilter))"
-                             OnDeleteButtonClicked="@DeleteTagFilters" />
-            <div class="d-flex">
-                <div class="d-flex gap-4">
-                    <MudButton Color="Color.Primary"
-                               EndIcon="@Icons.Material.Filled.Refresh"
-                               OnClick="LoadTags"
-                               Disabled="@(_tagFilterEditor?.CurrentTagFilter == null)">
-                        Reload
-                    </MudButton>
-                    <MudButton Color="Color.Primary"
-                               EndIcon="@Icons.Material.Filled.Clear"
-                               OnClick="ClearAllTags"
-                               Disabled="@(_tagFilterEditor?.CurrentTagFilter == null)">
-                        Clear
-                    </MudButton>
+        <div style=@($"height: 60%;{(_guideStep == 0 ? " z-index: calc(var(--mud-zindex-popover) + 1);" : "")}")>
+            <MudPaper id="tag-filter-editor-control-panel"
+                      Class="pa-8 gap-2"
+                      Style="height: 100%; display: grid; grid-template-rows: repeat(3, min-content)">
+                <TagFilterEditor @ref="@_tagFilterEditor"
+                                 TagFilters="@TagFilters"
+                                 SelectedTagFilterChanged="@SelectedTagFilterChanged"
+                                 OnCreateButtonClicked="@CreateTagFilter"
+                                 OnRenameButtonClicked="@RenameTagFilter"
+                                 OnSaveButtonClicked="@(() => SaveTagFilter(_tagFilterEditor.CurrentTagFilter))"
+                                 OnDeleteButtonClicked="@DeleteTagFilters" />
+                <div class="d-flex">
+                    <div class="d-flex gap-4">
+                        <MudButton Color="Color.Primary"
+                                   EndIcon="@Icons.Material.Filled.Refresh"
+                                   OnClick="LoadTags"
+                                   Disabled="@(_tagFilterEditor?.CurrentTagFilter == null)">
+                            Reload
+                        </MudButton>
+                        <MudButton Color="Color.Primary"
+                                   EndIcon="@Icons.Material.Filled.Clear"
+                                   OnClick="ClearAllTags"
+                                   Disabled="@(_tagFilterEditor?.CurrentTagFilter == null)">
+                            Clear
+                        </MudButton>
+                    </div>
+                    <MudSpacer />
+                    <MudSwitch T="bool"
+                               Label="Auto save"
+                               Color="Color.Primary"
+                               Value="SearchConfigurationService.Config.IsAutoSaveEnabled"
+                               ValueChanged=@OnIsAutoSaveEnabledChanged />
                 </div>
-                <MudSpacer />
-                <MudSwitch T="bool" Label="Auto save" Color="Color.Primary" @bind-Value="IsAutoSaveEnabled" />
-            </div>
-            <TagSearchPanelCollection TagSearchPanelChipModels="@_tagSearchPanelChipModels" />
-        </MudPaper>
-        <MudPaper Class="d-flex gap-4 pa-4 overflow-y-auto" Style="height: 40%;">
+                <TagSearchPanelCollection TagSearchPanelChipModels="@_tagSearchPanelChipModels" />
+            </MudPaper>
+            <GuidePopover ContentText="1. Create and edit tag filters."
+                          ButtonText="Next"
+                          Open=@_guidePopoversOpen[0]
+                          OnClose="@ShowNextGuide"
+                          AnchorOrigin="Origin.BottomRight"
+                          TransformOrigin="Origin.TopRight"
+                          Class="mt-4" />
+        </div>
+        <MudPaper Class="d-flex gap-4 pa-4 overflow-y-auto" Style=@($"height: 40%;{(_guideStep == 1 ? " z-index: calc(var(--mud-zindex-popover) + 1);" : "")}")>
             <PairedTagFilterSelector @ref="_includePairedTagFilterSelector"
                                      ChipModels="@_includeTagFilterChipModels"
                                      SelectedChipModelsChanged="@(collection => OnSelectedTagFilterCollectionChanged(collection, true))"
@@ -48,39 +64,67 @@
                                      HeaderColor="Color.Error"
                                      Other="_includePairedTagFilterSelector"
                                      Style="flex: 1;" />
+            <GuidePopover ContentText="2. Select tag filters to include or exclude."
+                          ButtonText="Next"
+                          Open=@_guidePopoversOpen[1]
+                          OnClose="@ShowNextGuide"
+                          AnchorOrigin="Origin.TopRight"
+                          TransformOrigin="Origin.BottomRight"
+                          Class="mt-n4" />
         </MudPaper>
     </div>
     <div id="search-filter-control-panel" style="flex: 1;" class="d-flex flex-column gap-2">
-        <LTKSearchView @bind-SelectedLanguage="@SelectedLanguage"
-                       @bind-SelectedType="@SelectedType"
-                       @bind-TitleSearchKeyword="@TitleSearchKeyword" />
-        <MudStack Row Spacing="2" StretchItems="StretchItems.Start" Class="my-2">
-            <MudButton Class="py-2"
-                       FullWidth
-                       Color="Color.Primary"
-                       Variant="Variant.Filled"
-                       OnClick="@CreateSearchFilter"
-                       StartIcon="@Icons.Material.Filled.Search">
-                Create and copy search link
-            </MudButton>
-            <MudButton Class="py-2"
-                       Color="Color.Primary"
-                       OnClick="@SearchFilters.Clear"
-                       Disabled="@(SearchFilters.Count == 0)">
-                Clear
-            </MudButton>
-        </MudStack>
-        <hr class="mud-divider mb-2" />
-        <MudStack class="overflow-y-auto" Spacing="2" Style="flex: 1;">
-            @foreach (SearchFilterDTO model in SearchFilters) {
-                <div style="display: grid; grid-template-columns: 1fr min-content; gap: 4px;">
-                    <SearchFilterItem Model="@model" />
-                    <MudIconButton Icon="@Icons.Material.Filled.Delete"
-                                   Disabled="@(model.Id == 0)"
-                                   OnClick="@(() => DeleteSearchFilter(model))"
-                                   Style="height: min-content; margin: auto;" />
-                </div>
-            }
-        </MudStack>
+        <div style=@(_guideStep == 2 ? " z-index: calc(var(--mud-zindex-popover) + 1);" : "")>
+            <LTKSearchView SelectedLanguage="@SearchConfigurationService.Config.SelectedLanguage"
+                           SelectedLanguageChanged=@OnSelectedLanguageChanged
+                           SelectedType="@SearchConfigurationService.Config.SelectedType"
+                           SelectedTypeChanged=@OnSelectedTypeChanged
+                           TitleSearchKeyword="@SearchConfigurationService.Config.TitleSearchKeyword"
+                           TitleSearchKeywordChanged=@OnTitleSearchKeywordChanged />
+            <GuidePopover ContentText="3. Select language, type and optionally enter a title search keyword. "
+                          ButtonText="Next"
+                          Open=@_guidePopoversOpen[2]
+                          OnClose="@ShowNextGuide"
+                          AnchorOrigin="Origin.TopLeft"
+                          TransformOrigin="Origin.TopRight"
+                          Class="ml-n4" />
+        </div>
+        <MudPaper class="d-flex flex-column pa-4 gap-2" style=@($"flex: 1;{(_guideStep == 3 ? " z-index: calc(var(--mud-zindex-popover) + 1);" : "")}")>
+            <MudStack Row Spacing="2" StretchItems="StretchItems.Start" Class="my-2">
+                <MudButton Class="py-2"
+                           FullWidth
+                           Color="Color.Primary"
+                           Variant="Variant.Filled"
+                           OnClick="@CreateSearchFilter"
+                           StartIcon="@Icons.Material.Filled.Search">
+                    Create and copy search link
+                </MudButton>
+                <MudButton Class="py-2"
+                           Color="Color.Primary"
+                           OnClick="@SearchFilters.Clear"
+                           Disabled="@(SearchFilters.Count == 0)">
+                    Clear
+                </MudButton>
+            </MudStack>
+            <hr class="mud-divider mb-2" />
+            <MudStack class="overflow-y-scroll" Spacing="2" Style="flex: 1;">
+                @foreach (SearchFilterDTO model in SearchFilters) {
+                    <div style="display: grid; grid-template-columns: 1fr min-content; gap: 4px;">
+                        <SearchFilterItem Model="@model" />
+                        <MudIconButton Icon="@Icons.Material.Filled.Delete"
+                                       Disabled="@(model.Id == 0)"
+                                       OnClick="@(() => DeleteSearchFilter(model))"
+                                       Style="height: min-content; margin: auto;" />
+                    </div>
+                }
+            </MudStack>
+            <GuidePopover ContentText="4. Create search links and use them to search for galleries."
+                          ButtonText="Finish"
+                          Open=@_guidePopoversOpen[3]
+                          OnClose="@ShowNextGuide"
+                          AnchorOrigin="Origin.TopLeft"
+                          TransformOrigin="Origin.TopRight"
+                          Class="ml-n4" />
+        </MudPaper>
     </div>
 </div>
