--- a/HitomiScrollViewerWebApp/Pages/AboutPage.razor
+++ b/HitomiScrollViewerWebApp/Pages/AboutPage.razor
@@ -4,7 +4,22 @@
 
 <div class="d-flex flex-column gap-4 pa-8">
     <MudText Typo="Typo.h4">About</MudText>
-    <MudText Typo="Typo.body1">Developer: kaismic</MudText>
-    <MudLink Href="https://github.com/kaismic">GitHub Link</MudLink>
-    <MudText Typo="Typo.body1">App Version: v3.1.0 (https://learn.microsoft.com/en-us/answers/questions/1444069/is-there-a-version-number-for-blazor-apps)</MudText>
+    <MudText Typo="Typo.body1">App Version: @AppConfigurationService.CURRENT_APP_VERSION.ToString()</MudText>
+    <div class="d-flex gap-4">
+        <MudText Typo="Typo.body1">Developer: kaismic</MudText>
+        <MudLink Href="https://github.com/kaismic">GitHub</MudLink>
+    </div>
+    <div class="d-flex gap-1">
+        <MudButton StartIcon="@Icons.Material.Filled.Sync"
+                   Color="Color.Primary"
+                   Variant="Variant.Filled"
+                   OnClick=@CheckUpdate
+                   Disabled=@(_updateCheckCount >= UPDATE_CHECK_LIMIT || _isCheckingUpdate)>
+            @(_updateCheckCount >= UPDATE_CHECK_LIMIT ? $"Please wait {(_remainingTime.ToString("m:ss"))} to check for updates again" : "Check for Updates")
+        </MudButton>
+        @if (_isCheckingUpdate) {
+            <MudProgressCircular Indeterminate Color="Color.Primary" />
+        }
+    </div>
+    <MudLink Typo="Typo.subtitle1">Download New Version</MudLink>
 </div>
