--- a/HitomiScrollViewerWebApp/Pages/AboutPage.razor
+++ b/HitomiScrollViewerWebApp/Pages/AboutPage.razor
@@ -9,17 +9,5 @@
         <MudText Typo="Typo.body1">Developer: kaismic</MudText>
         <MudLink Href="https://github.com/kaismic">GitHub</MudLink>
     </div>
-    <div class="d-flex gap-1">
-        <MudButton StartIcon="@Icons.Material.Filled.Sync"
-                   Color="Color.Primary"
-                   Variant="Variant.Filled"
-                   OnClick=@CheckUpdate
-                   Disabled=@(_updateCheckCount >= UPDATE_CHECK_LIMIT || _isCheckingUpdate)>
-            @(_updateCheckCount >= UPDATE_CHECK_LIMIT ? $"Please wait {(_remainingTime.ToString("m:ss"))} to check for updates again" : "Check for Updates")
-        </MudButton>
-        @if (_isCheckingUpdate) {
-            <MudProgressCircular Indeterminate Color="Color.Primary" />
-        }
-    </div>
-    <MudLink Typo="Typo.subtitle1">Download New Version</MudLink>
+    <MudLink Typo="Typo.subtitle1">Check for Updates (Href TODO) </MudLink>
 </div>
