Fixed download API and DownloadPage items incorrect render bug

--- a/HitomiScrollViewerWebApp/Components/DownloadItemView.razor
+++ b/HitomiScrollViewerWebApp/Components/DownloadItemView.razor
@@ -1,15 +1,4 @@
-﻿@*
-<MudAnimate Selector="@("#" + DOWNLOAD_ITEM_ID_PREFIX + Model.GalleryId)"
-            AnimationType="AnimationType.Fade"
-            AnimationTiming="AnimationTiming.EaseIn"
-            AnimationDirection="AnimationDirection.Reverse"
-            AnimationFillMode="AnimationFillMode.Forwards"
-            Duration="@DELETE_ANIMATION_DURATION"
-            Paused=@Model.DeleteAnimationPaused
-            />
-
-*@
-<MudPaper id="@(DOWNLOAD_ITEM_ID_PREFIX + Model.GalleryId)"
+﻿<MudPaper id="@Model.ElementId"
           Class="d-flex pa-4 gap-4" Outlined>
     <div style="width: 240px;">
         <MudText>@Model.GalleryId</MudText>
@@ -27,11 +16,11 @@
         </div>
     </div>
     <div style="width: 120px;" class="d-flex gap-4 align-center">
-        <MudIconButton Icon="@ControlButtonIcon"
-                       Disabled="@(_isWaitingResponse || Model.Status is DownloadStatus.Completed or DownloadStatus.Deleted)"
-                       OnClick="@OnActionButtonClick" />
-        <MudIconButton Icon="@Icons.Material.Filled.Delete"
-                       Disabled="@(_isWaitingResponse || Model.Status is DownloadStatus.Completed or DownloadStatus.Deleted)"
+        <MudIconButton Icon=@ControlButtonIcon
+                       Disabled=@(Model.Status is DownloadStatus.Completed or DownloadStatus.Deleted || !DownloadManager.IsHubConnectionOpen || Model.WaitingResponse)
+                       OnClick=@OnActionButtonClick />
+        <MudIconButton Icon=@Icons.Material.Filled.Delete
+                       Disabled=@(Model.Status is DownloadStatus.Completed or DownloadStatus.Deleted || !DownloadManager.IsHubConnectionOpen || Model.WaitingResponse)
                        OnClick="@OnDeleteButtonClick" />
     </div>
 </MudPaper>
